@@ -1,12 +1,17 @@
 DIST prosite-20.1.tar.bz2 4814695 RMD160 f01d2dafe777f6aa8aa1af04f16ce0e7587e3f0e SHA1 1308fd3b82c28c9f69f851d4c42d69571c45bab9 SHA256 a46163b10eeef64752e6c5e43ea0e02a0479c9700351e58d45fe889fafe6a377
+DIST prosite-20.9.tar.bz2 5108913 RMD160 8e68f488d4112809f54e1d559253c8bbad34ee53 SHA1 5561355d5066f49bda2dc029d6a35c0dc4626a47 SHA256 f00fded0cd67ea29ef0d40f1a1ef16ecb67b717acd7054a903355ad246478e02
 EBUILD prosite-20.1.ebuild 1335 RMD160 88f4d22eb00a98990350d5a90a57dea626f4209f SHA1 b6f2ecac4d4fc886db399fa0e54c5876e9f99b72 SHA256 7139abe806278def0638ac15836b62f1fa275eb3f7e1b20cf00c5dd98d1ad300
 MD5 a56c7eb6bffa454d981b3f88ca70bf31 prosite-20.1.ebuild 1335
 RMD160 88f4d22eb00a98990350d5a90a57dea626f4209f prosite-20.1.ebuild 1335
 SHA256 7139abe806278def0638ac15836b62f1fa275eb3f7e1b20cf00c5dd98d1ad300 prosite-20.1.ebuild 1335
-MISC ChangeLog 14235 RMD160 98411760a0324ab378d112f736e7da971e3526cd SHA1 811c681c4912cfd3e666e23bae142aebef9908a5 SHA256 5ef7de0d8874c864b307f051cd6d7318d5c9b95888c919b471ab19b8810fa18b
-MD5 6063ac870778654d4d1d02212210f2ff ChangeLog 14235
-RMD160 98411760a0324ab378d112f736e7da971e3526cd ChangeLog 14235
-SHA256 5ef7de0d8874c864b307f051cd6d7318d5c9b95888c919b471ab19b8810fa18b ChangeLog 14235
+EBUILD prosite-20.9.ebuild 1335 RMD160 6c36fc6e85e07683bad0a4bb1959af2adc28bd38 SHA1 fb38051f148a7ba996c170748d766b2f3813c9f6 SHA256 b8c8533dd72bc3a6437d51aedb83d19401e5a768c88eb1a5ee2fb5db247e4adf
+MD5 0d6eb8d47fec8f671749492cd46b5df2 prosite-20.9.ebuild 1335
+RMD160 6c36fc6e85e07683bad0a4bb1959af2adc28bd38 prosite-20.9.ebuild 1335
+SHA256 b8c8533dd72bc3a6437d51aedb83d19401e5a768c88eb1a5ee2fb5db247e4adf prosite-20.9.ebuild 1335
+MISC ChangeLog 14364 RMD160 f51cd89758164e9a7b45fb91cdadff7d425e2fd4 SHA1 5a0f3cd8e603d1af696ccf05e9fed019c2453989 SHA256 bf4f450041a47c35964bdfd84eefb2486b8b362e9f903b3cb3b25f27b8efa0ae
+MD5 578c0bc9491967d7e23e5d3e1a683257 ChangeLog 14364
+RMD160 f51cd89758164e9a7b45fb91cdadff7d425e2fd4 ChangeLog 14364
+SHA256 bf4f450041a47c35964bdfd84eefb2486b8b362e9f903b3cb3b25f27b8efa0ae ChangeLog 14364
 MISC metadata.xml 818 RMD160 c06d1d70df7c3aa4798785b0cec9cb3b20e29009 SHA1 6e81d46dbe14beff674cca67bef555021224dcfd SHA256 f749fe556ef9340ad76f45fdf9544ec41b57ad13dae3a07364932a8ed67deb0b
 MD5 0191a7da3d4abe623c51f8b12e850701 metadata.xml 818
 RMD160 c06d1d70df7c3aa4798785b0cec9cb3b20e29009 metadata.xml 818
@@ -14,3 +19,6 @@ SHA256 f749fe556ef9340ad76f45fdf9544ec41b57ad13dae3a07364932a8ed67deb0b metadata
 MD5 cd9ffd60aa11a88df4913b31f49f4435 files/digest-prosite-20.1 244
 RMD160 73bd52bc6ef83c321d9ec43306661d74661f6cf6 files/digest-prosite-20.1 244
 SHA256 e5d15206d202ed2d6c5fd5889e41c4bef4f58c6594f3624c8c699a074df9b4dc files/digest-prosite-20.1 244
+MD5 2a18f828222912c3292319be196f8608 files/digest-prosite-20.9 244
+RMD160 c6975a524c08dbc3cb2521d70bd406abeb1321a7 files/digest-prosite-20.9 244
+SHA256 b5e29d7fafe6cf7c8c6aaa539523d585f0e08bb3505f708500a7689c7446a242 files/digest-prosite-20.9 244
