@@ -1,0 +1,3 @@
+MD5 bdec0ea9bcdad54b0d0fe51387124158 prosite-20.9.tar.bz2 5108913
+RMD160 8e68f488d4112809f54e1d559253c8bbad34ee53 prosite-20.9.tar.bz2 5108913
+SHA256 f00fded0cd67ea29ef0d40f1a1ef16ecb67b717acd7054a903355ad246478e02 prosite-20.9.tar.bz2 5108913
