@@ -1,6 +1,11 @@
 # ChangeLog for sci-biology/prosite
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/prosite/ChangeLog,v 1.94 2006/12/12 20:11:35 ribosome Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/prosite/ChangeLog,v 1.95 2007/04/11 01:13:26 ribosome Exp $
+
+*prosite-20.9 (11 Apr 2007)
+
+  11 Apr 2007; Olivier Fisette <ribosome@gentoo.org> +prosite-20.9.ebuild:
+  New upstream version.
 
 *prosite-20.1 (12 Dec 2006)
 
